objects/BMCServiceDesk__BMC_ConnectivityCollection__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityCollectionType__c</fullName>
        <label>Connectivity Collection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConnectivitySegment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPConnectivitySubnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPXConnectivityNetwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCConnectivitySegment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SystemCollection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityStatus__c</fullName>
        <label>Connectivity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity/Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Connectivity/Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partitioned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>